--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -805,6 +805,26 @@ li a {
     display: inline-block;
 }
 
+.btn-secondary-xsmall7 {
+    height: 19px;
+    margin-left: 0;
+    font-size: 12px;
+    width: 54px;
+    padding: 0 5px 10px 3px;
+    border: 1px solid red;
+    text-align: center;
+}
+
+.btn-secondary-xsmall8 {
+    height: 15px;
+    margin-left: 0;
+    font-size: 12px;
+    width: 54px;
+    padding: 0 5px 10px 3px;
+    border: 1px solid red;
+    text-align: center;
+}
+
 .btn-secondary-xsmall {
     margin-left: 0;
     font-size: 14px;
@@ -1019,11 +1039,17 @@ li a {
 }
 
 .schedule-date {
-    font-size: 18px;
+    font-size: 16px;
+    padding-top: 2px;
 }
 
 .date-left-padding {
     padding-left: 90px;
+}
+
+.date-left-padding2 {
+    padding-left: 90px;
+    padding-bottom: 5px;
 }
 
 .smallcol {
@@ -1127,6 +1153,7 @@ li a {
 .col-left-margin-6 {
     margin-left: 6px;
 }
+
 
 .col-left-margin-18 {
     margin-left: 18px;
@@ -1248,6 +1275,10 @@ li a {
     margin-bottom: 25px;
 }
 
+.margin-bottom-small3 {
+    margin-bottom: 12px;
+}
+
 .margin-top-large {
     margin-top: 40px;
 }
@@ -1269,6 +1300,11 @@ li a {
 
 .row-height-14 {
     height: 14px;
+}
+
+.row-height-14-2 {
+    height: 14px;
+    margin-bottom: 6px;
 }
 
 .row-height-42 {
@@ -1300,6 +1336,10 @@ li a {
     width: 8px;
 }
 
+.align-text-bottom {
+    vertical-align: bottom;
+}
+
 .small-errormessage {
     width: 94px;
 }
@@ -1307,6 +1347,10 @@ li a {
 .small-errormessage2 {
     width: 95px;
     text-align: left;
+}
+
+.small-errormessage3 {
+    padding-right: 0;
 }
 
 .no-padding-top{
@@ -1380,6 +1424,14 @@ li a {
 
 .row-margin {
     margin-bottom: 12px;
+}
+
+.row-margin2 {
+    margin-bottom: 16px;
+}
+
+.row-top-margin {
+    margin-top: 12px;
 }
 
 .small-row-margin {
@@ -1462,6 +1514,11 @@ li a {
 
 .height-18-2 {
     height: 18px;
+    font-size: 14px;
+}
+
+.height-18-3 {
+    height: 17px;
     font-size: 14px;
 }
 
