--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -1860,6 +1860,10 @@ a:hover, a:focus {
     margin-top: 150px;
 }
 
+.ssmall-col-admin {
+    width: 7%;
+}
+
 .small-col-admin {
     width: 8%;
 }
