Updated attachments to meet new requirements. Finally finished BankID.

--- a/Sjuklöner/Views/Account/BankIDLogin.cshtml
+++ b/Sjuklöner/Views/Account/BankIDLogin.cshtml
@@ -1,5 +1,5 @@
-﻿<div class="row" id="loginForm">
+﻿<div class="row page-header1" id="loginForm">
     <section>
-        
+        <p>@ViewBag.serialNumber</p>
     </section>
 </div>
