--- a/Sjuklöner/Views/Claims/Create4.cshtml
+++ b/Sjuklöner/Views/Claims/Create4.cshtml
@@ -15,7 +15,7 @@
     </nav>
 </div>
 
-@using (Html.BeginForm("Create4", "Claims", new { noOfSubAssistants = Model.NumberOfSubAssistants }, FormMethod.Post, new { enctype = "multipart/form-data" } ))
+@using (Html.BeginForm("Create4", "Claims", new { noOfSubAssistants = Model.NumberOfSubAssistants }, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.ClaimNumber)
@@ -81,7 +81,7 @@
                 </div>
             }
 
-            <div class="row row-height-14 row-top-margin align-bottom4">
+            <!--<div class="row row-height-14 row-top-margin align-bottom4">
                 <div class="col col-md-2">
 
                 </div>
@@ -99,11 +99,11 @@
             </div>
             <div class="row row-height-14 line-height-07">
                 <div class="col col-md-offset-2 col-md-10">
-                    @Html.ValidationMessageFor(model => model.SickLeaveNotification, "", new { @class = "text-danger font-size-11" })
+                    @*Html.ValidationMessageFor(model => model.SickLeaveNotification, "", new { @class = "text-danger font-size-11" })*@
                 </div>
             </div>
             <div class="row row-height-14">
-            </div>
+            </div>-->
 
             <div class="row row-height-14 row-top-margin align-bottom4">
                 <div class="col col-md-2">
