Deleted Sjukrånvaroanmälan from PDf Document and from the Detailed View of Claims

--- a/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
@@ -1002,29 +1002,18 @@
                                 </a>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col col-md-5">
+                    </div>                          
+                   @if (Model.Documents.Where(d => d.Title == "DoctorsCertificate").Any())
+                   {
+                   <div class="col col-md-5">
                         <div class="form-group line-height-12">
-                            <div class="row display-padding">
-                                <a target="_blank" href="@Href($"~/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "SickLeaveNotification").FirstOrDefault().Filename}")">
-                                    Sjukfrånvaroanmälan
+                            <div class="row display-padding6">
+                                <a target="_blank" href="@Href($"~/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "DoctorsCertificate").FirstOrDefault().Filename}")">
+                                    Läkarintyg
                                 </a>
                             </div>
                         </div>
-                    </div>
-                    @if (Model.Documents.Where(d => d.Title == "DoctorsCertificate").Any())
-                    {
-                        <div class="col col-md-5">
-                            <div class="form-group line-height-12">
-                                <div class="row display-padding6">
-                                    <a target="_blank" href="@Href($"~/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "DoctorsCertificate").FirstOrDefault().Filename}")">
-                                        Läkarintyg
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
+                   </div>
                     }
                 </div>
                 <div class="row">
@@ -1040,7 +1029,7 @@
                     <div class="col col-md-5">
                         <div class="form-group line-height-12">
                             <div class="row display-padding6">
-                                <a target="_blank" href="@Href($"~/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "TimeReportStandIn").FirstOrDefault().Filename}")">
+                                <a target="_blank" href="@Href($"~/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "TimeReportStandIn[0]").FirstOrDefault().Filename}")">
                                     Tidsredovisning, Försäkringskassan, vikarierande assistent
                                 </a>
                             </div>
